--- a/src/css/App.css
+++ b/src/css/App.css
@@ -77,7 +77,7 @@ body {
   background-color: whitesmoke;
   text-align: left;
   padding: 2em;
-  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .doggo-list-box button {
